--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                     <!-- Run button -->
                     <li class="nav-item">
-                        <button class="px-4 bg-green" id="run-button" value="astar" disabled>Run</button>
+                        <button class="px-4 bg-green" id="run-button" value="bfs" disabled>Run</button>
                     </li>
                     <!-- /Run button -->
 
