Add start and update layout button

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 <option value="weight-10">Weight +10</option>
             </select>
 
+            <button id="updateLayout" style="cursor: pointer;">Update layout</button>
+            <button id="start" style="cursor: pointer;">Start</button>
+
             <label class="d-block" for="speedSlider">Sorting speed</label>
             <input type="range" min="0" max="100" value="50" id="speedSlider" style="cursor: pointer;" />    
         </div>
