--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </select>
 
             <button id="updateLayout" style="cursor: pointer;">Update layout</button>
-            <button id="run" style="cursor: pointer;">Run</button>
+            <button id="run" style="cursor: pointer;" disabled>Run</button>
 
             <label class="d-block" for="speedSlider">Sorting speed</label>
             <input type="range" min="0" max="100" value="50" id="speedSlider" style="cursor: pointer;" />    
