Add random weights as layout

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <label for="layout">Layout</label>
             <select id="layout" style="cursor: pointer;">
                 <option value="random-walls">Random walls</option>
+                <option value="random-weights">Random weights</option>
             </select>
 
             <label for="pencil">Pencil</label>
