Button to clear the board

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
             <button id="updateLayout" style="cursor: pointer;">Update layout</button>
             <button id="run" style="cursor: pointer;" disabled>Run</button>
+            <button id="clearBoard" style="cursor: pointer;">Clear board</button>
 
             <label class="d-block" for="speedSlider">Sorting speed</label>
             <input type="range" min="0" max="100" value="50" id="speedSlider" style="cursor: pointer;" />    
