Set "wall" as standard pencil value

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <label class="navbar-text" for="pencil">Pencil</label>
                         <select class="custom-select d-inline-block" id="pencil">
                             <option value="erase">Erase</option>
-                            <option value="wall">Wall</option>
+                            <option value="wall" selected>Wall</option>
                             <option value="weight-5">Weight +5</option>
                             <option value="weight-10">Weight +10</option>
                         </select>
