Added dropdown list to clear specific nodes

--- a/index.html
+++ b/index.html
@@ -66,12 +66,20 @@
                         </div>
                     </li>
 
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="clearDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Clear
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="clearDropdown" id="clearOptions">
+                            <a class="dropdown-item" href="#">Walls</a>
+                            <a class="dropdown-item" href="#">Weights</a>
+                            <a class="dropdown-item" href="#">Path</a>
+                            <a class="dropdown-item" href="#">All</a>
+                        </div>
+                    </li>
+
                     <button class="btn h-25 px-4" id="run" disabled>
                         Run
-                    </button>
-
-                    <button class="btn h-25 px-4 " id="clearBoard">
-                        Clear
                     </button>
                 </ul>
             </div>
