--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
 
         <!-- Custom JS -->
-        <script type="module" src="js/classes/settings.js" defer></script>
+        <script type="module" src="js/settings.js" defer></script>
 
         <!-- Custom CSS -->
         <link rel="stylesheet" type="text/css" href="css/styling.css">
@@ -35,7 +35,7 @@
                         <p class="navbar-text m-0">Algorithm</p>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="algorithmDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            A*
+                                A*
                             </a>
                             <div class="dropdown-menu" aria-labelledby="algorithmDropdown" id="algorithmOptions">
                                 <a class="dropdown-item" href="#">BFS</a>
@@ -50,7 +50,7 @@
                         <p class="navbar-text m-0">Pencil</p>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="pencilDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Wall
+                                Wall
                             </a>
                             <div class="dropdown-menu" aria-labelledby="pencilDropdown" id="pencilOptions">
                                 <a class="dropdown-item" href="#">Erase</a>
@@ -68,9 +68,11 @@
                     
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="layoutDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Layout
+                            Layout & Mazes
                         </a>
                         <div class="dropdown-menu" aria-labelledby="layoutDropdown" id="layoutOptions">
+                            <a class="dropdown-item" href="#">Recursive division</a>
+                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Random walls</a>
                             <a class="dropdown-item weightedAlgorithm disabled" href="#">Random weights</a>
                         </div>
@@ -78,7 +80,7 @@
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="clearDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Clear
+                            Clear
                         </a>
                         <div class="dropdown-menu" aria-labelledby="clearDropdown" id="clearOptions">
                             <a class="dropdown-item" href="#">Walls</a>
