Give recursive division layout element an ID

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         <!-- Custom JS -->
         <script type="module" src="js/settings.js" defer></script>
+        <script type="module" src="js/mazes/recursiveDivision.js" defer></script>
 
         <!-- Custom CSS -->
         <link rel="stylesheet" type="text/css" href="css/styling.css">
@@ -71,7 +72,7 @@
                             Layout & Mazes
                         </a>
                         <div class="dropdown-menu" aria-labelledby="layoutDropdown" id="layoutOptions">
-                            <a class="dropdown-item" href="#">Recursive division</a>
+                            <a class="dropdown-item" id="recursiveDivision" href="#">Recursive division</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Random walls</a>
                             <a class="dropdown-item weightedAlgorithm disabled" href="#">Random weights</a>
