Select astar as starter algorithm

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Pathfinding</title>
 
         <!-- Bootstrap -->
@@ -13,13 +13,13 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
         <!-- Fontawesome -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" />
 
         <!-- Custom JS -->
         <script type="module" src="js/settings.js" defer></script>
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" type="text/css" href="css/styling.css">
+        <link rel="stylesheet" type="text/css" href="css/styling.css" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -41,7 +41,7 @@
                                 <a class="dropdown-item" href="#">BFS</a>
                                 <a class="dropdown-item" href="#">DFS</a>
                                 <a class="dropdown-item" href="#">Dijkstra</a>
-                                <a class="dropdown-item" href="#">A*</a>
+                                <a class="dropdown-item selected" href="#">A*</a>
                             </div>
                         </li>
                     </div>
